tests/fixtures/invalid/multidimensional_array_declaration.c
int main(void) {
  int matrix[2][3];
  return 0;
}
